ext-app.yaml
---
kind: Pod
apiVersion: v1
metadata:
  name: ext-app
  labels:
    app: ext
spec:
  containers:
  - name: ext-app
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text=ext"
---
kind: Service
apiVersion: v1
metadata:
  name: ext-service
spec:
  selector:
    app: ext
  ports:
  # Default port used by the image
  - port: 5678
---
