rxz-app.yaml
---
kind: Pod
apiVersion: v1
metadata:
  name: rxz-app
  labels:
    app: rxz
spec:
  containers:
  - name: rxz-app
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text=rxz"
---
kind: Service
apiVersion: v1
metadata:
  name: rxz-service
spec:
  selector:
    app: rxz
  ports:
  # Default port used by the image
  - port: 5678
---
